# montecasino

./: .gitignore  README.md  bench.py  build.py  make.sh  pyproject.toml  setup.py
casino/: __init__.py  algebra.py  core.py  digest.py  discrete.py  distributions.py  engine.py  histogram.py  nodes.py  opcodes.py  random.pxd  random.py  ranvar.py
casino/ranlib/: distributions.pxd  distributions.py
docs/: benchmark.py  benchmark_add.py  benchmark_max.py  benchmark_mul.py  echap_exp.py  performance.md
docs/examples/: ex01_benchmark_add.py  ex01_benchmark_uniform.py
montecasino/: __init__.py  core.py  histogram.py  nodes.py  opcodes.py
tests/: test_algebra.py  test_compiled.py  test_digest.py  test_histogram.py  test_problems.py  test_randomVariable.py  test_triangular.py  test_virtualMachine.py
