[tool.poetry]
name = "casino"
version = "0.0.0.post95.dev0+71fcba5"
description = "Casino enables fast probabilistic modelling"
authors = ["Adolph Vogel <ajvogel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
numba = "^0.57.0"
pytest = "^7.4.1"
pandas = "^2.1.0"
statsmodels = "^0.14.0"
cython = "^3.0.8"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pyinstrument = "^4.4.0"
jupyter-console = "^6.6.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
cython = "^3.0.0"

# [build-system]
# requires = ["poetry-core", "setuptools", "cython"]
# build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning", "cython"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.build]
script = "build.py"

[tool.poetry-dynamic-versioning]
enable = true
