[project]
name = "casino"
version = "0.3.6"
description = "Casino enables fast probabilistic modelling"
authors = [{ name = "Adolph Vogel", email = "ajvogel@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
]

[tool.hatch.build.targets.sdist]
include = ["casino/*.so"]

[tool.hatch.build.targets.wheel]
include = ["casino/*.so"]

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
]



[build-system]
requires = ["setuptools>=80", "cython>=3.1.2"]
build-backend = "setuptools.build_meta"
